--- a/scss/_herosection.scss
+++ b/scss/_herosection.scss
@@ -44,6 +44,10 @@
                     display: none;
                 }
 
+                @include ls-tablet {
+                    display: none;
+                }
+
 
             }
 
@@ -52,6 +56,16 @@
                 justify-content: center;
                 padding: 1rem 0;
                 margin: 0;
+            }
+
+            @include pt-tablet {
+                display: flex;
+                justify-content: center;    
+            }
+
+            @include ls-tablet {
+                display: flex;
+                justify-content: center;
             }
 
         }
@@ -88,6 +102,8 @@
                         display: none;
                     }
                 }   
+
+                // Mobile card styles
 
                 .hero-mobile {
                     display: none;
@@ -207,6 +223,18 @@
                         @include mobile {
                             display: none;
                         }
+
+                        @include pt-tablet {
+                            font-size: $fontSize-two;
+                        }
+
+                        @include ls-tablet {
+                            font-size: $fontSize-two;
+                        }
+
+                        @include laptop {
+                            font-size: $fontSize-two;
+                        }
                     }
 
                     .hero-tour {
@@ -222,12 +250,30 @@
                         @include mobile {
                             display: none;
                         }
+
+                        @include pt-tablet {
+                            font-size: $fontSize-five;
+                        }
+
+                        
                     }
 
                     @include mobile {
                         padding: 1rem;
                         height: auto;
                         background-color: $color-three;
+                    }
+
+                    @include pt-tablet {
+                        padding: 2rem 1rem;
+                    }
+
+                    @include ls-tablet {
+                        padding: 2rem 1rem;
+                    }
+
+                    @include laptop {
+                        padding: 2rem 1rem;
                     }
                 }  
 
@@ -237,6 +283,16 @@
                     margin-bottom: 2rem;
                     background-color: $color-one;
                 }
+                
+                @include pt-tablet {
+                    width: 50%;
+                    height: auto;  
+                }
+
+                @include ls-tablet {
+                    width: 50%;
+                    height: auto;
+                }
             }
 
         }
@@ -245,6 +301,26 @@
             padding: 0 4px;
             margin: 0 12px;
             width: auto;
+        }
+
+        @include pt-tablet {
+            padding: 0 .5rem;
+            margin: 0 1.5rem;           
+        }
+
+        @include ls-tablet {
+            padding: 0 1rem;
+            margin: 0 1rem;
+        }
+
+        @include laptop {
+            padding: 0 1rem;
+            margin: 0 1rem;
+        }
+
+        @include lg-laptop {
+            padding: 0 1rem;
+            margin: 0 1.5rem;
         }
     }
 }
