--- a/scss/style.scss
+++ b/scss/style.scss
@@ -201,7 +201,7 @@ body {
                 height: 140px;
                 width: 290px;
                 color: $color-one;
-                background: linear-gradient(to right, #2e2e2e, #3a3a3a);
+                background-color: $color-containerOne;
                 display: flex;
                 justify-content: center;
                 align-items: center;                   
