--- a/scss/style.css
+++ b/scss/style.css
@@ -708,7 +708,7 @@ body .navbar-two div div {
   height: 140px;
   width: 290px;
   color: #fff;
-  background: linear-gradient(to right, #2e2e2e, #3a3a3a);
+  background-color: #2e2e2e;
   display: flex;
   justify-content: center;
   align-items: center;
