--- a/scss/style.css
+++ b/scss/style.css
@@ -25,6 +25,12 @@
   letter-spacing: 3.5px;
   font-size: 32px;
 }
+@media screen and (max-width: 320px) {
+  .hero .hero-container .hero-top .hero-left {
+    text-align: center;
+    font-size: 24px;
+  }
+}
 .hero .hero-container .hero-top .hero-right {
   display: flex;
   align-items: center;
@@ -38,7 +44,7 @@
     display: none;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   .hero .hero-container .hero-top .hero-right {
     display: none;
   }
@@ -56,7 +62,7 @@
     margin: 0;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   .hero .hero-container .hero-top {
     display: flex;
     justify-content: center;
@@ -125,6 +131,14 @@
     text-transform: uppercase;
     font-weight: bold;
   }
+}
+@media screen and (max-width: 600px) and (max-width: 320px) {
+  .hero .hero-container .hero-bottom .hero-card .hero-mobile .hero-mobile-name {
+    font-size: 18px;
+    padding-bottom: 0.5rem;
+  }
+}
+@media screen and (max-width: 600px) {
   .hero .hero-container .hero-bottom .hero-card .hero-mobile .hero-mobile-tour {
     letter-spacing: 1.4px;
     font-family: "Merriweather", serif;
@@ -132,6 +146,11 @@
     color: #000;
     font-weight: bold;
     font-style: italic;
+  }
+}
+@media screen and (max-width: 600px) and (max-width: 320px) {
+  .hero .hero-container .hero-bottom .hero-card .hero-mobile .hero-mobile-tour {
+    font-size: 16px;
   }
 }
 .hero .hero-container .hero-bottom .hero-card .hero-event {
@@ -204,7 +223,7 @@
     display: none;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   .hero .hero-container .hero-bottom .hero-card .hero-person .hero-name {
     font-size: 24px;
   }
@@ -228,15 +247,16 @@
   color: #000;
   letter-spacing: 1.4px;
   font-weight: 600;
+  overflow: auto;
 }
 @media screen and (max-width: 600px) {
   .hero .hero-container .hero-bottom .hero-card .hero-person .hero-tour {
     display: none;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   .hero .hero-container .hero-bottom .hero-card .hero-person .hero-tour {
-    font-size: 18px;
+    font-size: 16px;
   }
 }
 @media screen and (max-width: 600px) {
@@ -246,9 +266,9 @@
     background-color: #de53f4;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   .hero .hero-container .hero-bottom .hero-card .hero-person {
-    padding: 2rem 1rem;
+    padding: 2rem 0.5rem;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
@@ -269,10 +289,9 @@
     background-color: #fff;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   .hero .hero-container .hero-bottom .hero-card {
     width: 50%;
-    height: auto;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
@@ -288,7 +307,7 @@
     width: auto;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   .hero .hero-container {
     padding: 0 0.5rem;
     margin: 0 1.5rem;
@@ -336,7 +355,7 @@ footer .footer-container .footer-newsletter {
   height: 50%;
   width: 50%;
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   footer .footer-container .footer-newsletter {
     height: 80%;
     width: 85%;
@@ -372,7 +391,7 @@ footer .footer-container .footer-info {
   flex-direction: column;
   margin: 1rem;
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   footer .footer-container .footer-info {
     height: auto;
     width: 75%;
@@ -405,7 +424,7 @@ footer .footer-container .footer-update {
   width: auto;
   padding: 0.5rem 0 2.5rem 0;
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   footer .footer-container .footer-update {
     text-align: center;
   }
@@ -454,29 +473,34 @@ footer .footer-container .footer-link a:hover {
     height: 100%;
   }
   footer .footer-container .footer-newsletter {
-    width: 375px;
+    width: 90%;
     height: 350px;
   }
   footer .footer-container .footer-info {
-    width: 425px;
+    width: auto;
     height: 350px;
     padding: 1rem;
     gap: 10px;
   }
   footer .footer-container .footer-info .footer-signup {
-    font-size: 24px;
+    font-size: 20px;
     line-height: 50px;
   }
   footer .footer-container .footer-info .footer-update {
     text-align: center;
-    font-size: 24px;
-    padding-bottom: 1rem;
+    font-size: 18px;
+    padding: 0 1rem 1rem 1rem;
   }
   footer .footer-container .footer-info a {
     padding: 0.5rem 5.5rem;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (max-width: 600px) and (max-width: 375px) {
+  footer .footer-container .footer-info a {
+    padding: 0.5rem 3.5rem;
+  }
+}
+@media screen and (min-width: 601px) and (max-width: 767px) {
   footer .footer-container {
     height: 100%;
     overflow: hidden;
@@ -501,7 +525,7 @@ footer .footer-container .footer-link a:hover {
     padding: 1rem 0 2.5rem 0;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   footer {
     height: 500px;
     padding: 1.5rem 0;
@@ -553,7 +577,7 @@ body .navbar ul li {
   list-style-type: none;
   transition: all 0.3s ease-in;
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   body .navbar ul li {
     display: none;
   }
@@ -628,7 +652,7 @@ body .navbar .navbar-search i {
     right: 20%;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   body .navbar .navbar-search {
     display: none;
   }
@@ -680,7 +704,7 @@ body .navbar .navbar-login a:hover {
     display: none;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   body .navbar {
     display: none;
   }
@@ -755,7 +779,7 @@ body .navbar-two div div span {
     margin: 8px 8px 8px 8px;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   body .navbar-two div div {
     height: auto;
     width: 225px;
@@ -823,7 +847,7 @@ body .navbar-two div ul a:hover {
     display: none;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   body .navbar-two div ul {
     display: none;
   }
@@ -861,7 +885,7 @@ body .navbar-two div .navbar-bars {
     padding-right: 0;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   body .navbar-two div .navbar-bars {
     display: flex;
     justify-content: flex-end;
@@ -884,7 +908,7 @@ body .navbar-two div .navbar-bars {
     margin: 0 8px;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 767px) {
+@media screen and (min-width: 601px) and (max-width: 767px) {
   body .navbar-two div {
     margin: 0 8px;
   }
