--- a/scss/style.scss
+++ b/scss/style.scss
@@ -152,6 +152,16 @@ body {
                 letter-spacing: $letter-spaceOne;
             }
 
+            i {
+                cursor: pointer;
+                transition: all 0.3s ease-in-out;
+            }
+
+            i:hover {
+                transition: all 0.3s ease-in-out;
+                transform: scale(1.2);
+            }
+
             a:hover {
                 transition: all 0.3s ease;
                 color: $color-two;
